# budget

./: .editorconfig  .gitignore  LICENSE  README.md  build_mac_app.sh
backend/: .gitignore  README.md  macapp_entry.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  routes_budgets.py  routes_categories.py  routes_dashboard.py  routes_drive_sync.py  routes_export.py  routes_import.py  routes_transactions.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  budgets_service.py  categories_service.py  dashboard_service.py  drive_service.py  export_service.py  import_service.py  transactions_service.py
backend/app/storage/: __init__.py  csv_repo.py  file_lock.py  migrations.py
macos-app/: Package.swift
macos-app/Sources/MacWrapper/: AppDelegate.swift  BackendManager.swift  MacWrapperApp.swift  RootView.swift  WebView.swift  WindowAccessor.swift
macos-app/build_tool/: Cargo.toml
macos-app/build_tool/src/: main.rs
webapp/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts
webapp/public/: site.webmanifest
webapp/src/: App.tsx  index.css  main.tsx
webapp/src/api/: config.ts  index.ts  queries.ts  types.ts
webapp/src/lib/: analysis.ts  categoryHierarchy.ts  format.ts  transactionUiEvents.ts  urlState.ts  useMediaQuery.ts
webapp/src/macapp/: apiBase.js  apiBase.ts
webapp/src/pages/: Categories.tsx  Dashboard.tsx  Help.tsx  Insights.tsx  (+2 more)
(+56 files in other folders)
